# cpputils

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp
include/: Logger.h  Timer.h
include/cpputils/: Logger.h  StreamEater.h  Timer.h  cpputils_global.h  dll.h
src/: Logger.cpp  StreamEater.cpp  StreamEaterImpl.cpp  StreamEaterImpl.h  Timer.cpp  TimerImpl.cpp  TimerImpl.h  cpputils_global.h
